Clustering on FARA2019data

--- a/Aany/FARA_Data2019.ipynb
+++ b/Aany/FARA_Data2019.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Data Used: Food Access Research Atlas data:\n",
+    "#### Data Used: Food Access Research Atlas 2019 data:\n",
     "https://www.ers.usda.gov/data-products/food-access-research-atlas/download-the-data/\n",
     "\n",
     "\n",
@@ -595,6 +595,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The FARA data includes a variety of geographic locations and socio-economic variables across USA"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -775,6 +782,13 @@
    ],
    "source": [
     "df_brooklyn.head(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exploratory Data Analysis"
    ]
   },
   {
